...
        ClayTextField(
            value = queryText,
            onValueChange = {
                queryText = it
                onQueryChange(it)
            },
            fieldTag = "field_search",
            placeholder = stringResource(R.string.product_search_hint),
            leadingIcon = painterResource(R.drawable.ic_search),
            trailingContent =
                if (queryText.isEmpty()) {
                    null
                } else {
...
